# Football_Robot

./: CMakeLists.txt  HowToUseToolkit.txt  README.md
data/: marker_data
include/: ARToolKitLib.hpp
modules/: CMakeLists.txt
modules/AR/: CMakeLists.txt
modules/ARCppWrapper/: ARToolKitLib.cpp  CMakeLists.txt
modules/ARMulti/: CMakeLists.txt
modules/ARgsub/: CMakeLists.txt
src/: Actuator.hpp  Behavior.hpp  CMakeLists.txt  Dynamixel.hpp  DynamixelTest.hpp  GPIO.hpp  InternalState.hpp  Motor.h  PWM.hpp  Perception.hpp  PerceptionTest.hpp  SPI.hpp  SerialComm.hpp  ServoTest.hpp  Sound.hpp  SoundTest.hpp  Test1_Dynamixel.cpp  Test2_Servo.cpp  Test3_Perception.cpp  Test4_Sound.cpp  Test5_BehDesign.cpp  Test6_BehMapping.cpp  Test7_IntStateDesign.cpp  Test8_Android.cpp  server.hpp  session.hpp
